--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
+
+<html>
+  <head>
+    <title>This is the title</title>
+  </head>
+  <body>
+    <p>This is a body paragraph.</p>
+  </body>
+</html>
